Added base EntityManager, and Component class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ FetchContent_Declare(sdl
         )
 FetchContent_MakeAvailable(sdl)
 
+set(COMMON_SOURCE_DIR ${PROJECT_SOURCE_DIR}/common)
+
 # GAME
 add_subdirectory(game)
 
