--- a/editor/CMakelists.txt
+++ b/editor/CMakelists.txt
@@ -29,6 +29,7 @@ target_link_libraries(EditorFrakkas
 
 target_include_directories(EditorFrakkas
                            PRIVATE include
+                           PRIVATE ../common/include
                            PRIVATE ${PROJECT_SOURCE_DIR}/engine/include
                            PRIVATE ${PROJECT_SOURCE_DIR}/lib
                            PRIVATE ${imgui_SOURCE_DIR}
