--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,7 +1,14 @@
-add_library(GameFrakkas SHARED src/behavior_base.cpp)
+add_library(GameFrakkas SHARED
+            src/bar.cpp
+            ../common/src/component.cpp
+            ../common/src/entity.cpp
+)
 
 target_include_directories(GameFrakkas
-                           PRIVATE include)
+                           PRIVATE include
+                           PRIVATE ${PROJECT_SOURCE_DIR}/common/include
+)
 
 set_target_properties(GameFrakkas
-                      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+                      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
+)
