--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -2,14 +2,19 @@ add_executable(Launcher
                launcher.cpp)
 
 target_include_directories(Launcher
-                           PRIVATE ${PROJECT_SOURCE_DIR}/engine/include)
+                           PRIVATE ${PROJECT_SOURCE_DIR}/engine/include
+                           PRIVATE ../common/include
+)
 
 target_link_directories(Launcher
-                        PRIVATE ${PROJECT_SOURCE_DIR}/lib)
+                        PRIVATE ${PROJECT_SOURCE_DIR}/lib
+)
 
 target_link_libraries(Launcher
-                      PRIVATE EngineFrakkas)
+                      PRIVATE EngineFrakkas
+)
 
 set_target_properties(Launcher
-                      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+                      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
 
