--- a/imgui.ini
+++ b/imgui.ini
@@ -10,46 +10,46 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=199,701
+Size=198,701
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=201,496
-Size=838,224
+Pos=200,444
+Size=659,276
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Inspector]
-Pos=1041,19
-Size=239,701
+Pos=861,19
+Size=419,701
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][ResourceViewer]
-Pos=201,496
-Size=838,224
+Pos=200,444
+Size=659,276
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene]
-Pos=201,19
-Size=838,475
+Pos=200,19
+Size=659,423
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Game]
-Pos=201,19
-Size=838,475
+Pos=200,19
+Size=659,423
 Collapsed=0
 DockId=0x00000001,1
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,109 Size=1280,701 Split=X
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=199,701 Selected=0x29EABFBD
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1079,701 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=838,701 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1280,475 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1280,224 Selected=0xDD3E564C
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=239,701 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1363,126 Size=1280,701 Split=X
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=198,701 Selected=0x29EABFBD
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1080,701 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=659,701 Split=Y Selected=0x26816F31
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,423 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=604,276 Selected=0xDD3E564C
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=419,701 Selected=0xE7039252
 
