--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_library(GameFrakkas SHARED
             src/bar.cpp
-            ../common/src/component.cpp
-            ../common/src/entity.cpp
+            ${COMMON_SOURCE_DIR}/component.cpp
+            ${COMMON_SOURCE_DIR}/entity.cpp
 )
 
 target_include_directories(GameFrakkas
                            PRIVATE include
-                           PRIVATE ${PROJECT_SOURCE_DIR}/common/include
+                           PRIVATE ${COMMON_INCLUDE_DIR}
                            PRIVATE ${PROJECT_SOURCE_DIR}/maths/include
                            PRIVATE ${PROJECT_SOURCE_DIR}/maths/inline
 )
