--- a/imgui.ini
+++ b/imgui.ini
@@ -45,11 +45,11 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1363,126 Size=1280,701 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,109 Size=1280,701 Split=X
   DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=198,701 Selected=0x29EABFBD
   DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1080,701 Split=X
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=659,701 Split=Y Selected=0x26816F31
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,423 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,423 CentralNode=1 Selected=0xE192E354
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=604,276 Selected=0xDD3E564C
     DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=419,701 Selected=0xE7039252
 
