--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
+# editor-based Rest Client
 **/.idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
