--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -6,30 +6,22 @@ add_library(EngineFrakkas STATIC
 			src/renderer/lowlevel/camera.cpp
 			src/renderer/lowlevel/lowrenderer.cpp
 			src/resources/program_shader.cpp
-			../common/src/component.cpp
-			../common/src/entity.cpp
-        )
+			${COMMON_SOURCE_DIR}/component.cpp
+			${COMMON_SOURCE_DIR}/entity.cpp
+)
+
 target_include_directories(EngineFrakkas
                            PRIVATE include
                            PRIVATE ${PROJECT_SOURCE_DIR}/lib
-                           PUBLIC ${PROJECT_SOURCE_DIR}/lib/assimp/include
                            PRIVATE ${PROJECT_SOURCE_DIR}/maths/include
                            PRIVATE ${PROJECT_SOURCE_DIR}/maths/inline
 						   PRIVATE ${PROJECT_SOURCE_DIR}/common/include
 )
 
-target_link_directories(EngineFrakkas PUBLIC ${PROJECT_SOURCE_DIR}/lib/assimp/windows)
 # Include jolt and assimp libraries
 include(${PROJECT_SOURCE_DIR}/jolt.cmake)
 include(${PROJECT_SOURCE_DIR}/assimp.cmake)
 
-target_link_libraries(EngineFrakkas
-                      PRIVATE SDL2-static
-                      PRIVATE debug assimp-vc142-mtd
-                      PRIVATE optimized assimp-vc142-mt
-		              PRIVATE debug zlibstaticd
-                      PRIVATE optimized zlibstatic
-)
+target_link_libraries(EngineFrakkas PRIVATE SDL2-static)
 
-set_target_properties(GameFrakkas PROPERTIES
- 					  ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+set_target_properties(GameFrakkas PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
