--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -1,20 +1,8 @@
-add_executable(Launcher
-               launcher.cpp)
+add_executable(Launcher launcher.cpp)
 
 target_include_directories(Launcher
                            PRIVATE ${PROJECT_SOURCE_DIR}/engine/include
-                           PRIVATE ../common/include
+                           PRIVATE ${COMMON_INCLUDE_DIR}
 )
 
-target_link_directories(Launcher
-                        PRIVATE ${PROJECT_SOURCE_DIR}/lib
-)
-
-target_link_libraries(Launcher
-                      PRIVATE EngineFrakkas
-)
-
-set_target_properties(Launcher
-                      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}
-)
-
+target_link_libraries(Launcher PRIVATE EngineFrakkas)
