--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(EngineFrakkas STATIC
 			src/resources/program_shader.cpp
 			${COMMON_SOURCE_DIR}/component.cpp
 			${COMMON_SOURCE_DIR}/entity.cpp
+		    ${PROJECT_SOURCE_DIR}/lib/stb_image.c
 )
 
 target_include_directories(EngineFrakkas
