--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=1280,701
+Pos=0,21
+Size=1280,699
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,20 +9,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,19
-Size=198,701
+Pos=0,21
+Size=195,699
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=200,444
-Size=659,276
+Pos=197,490
+Size=847,230
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Inspector]
-Pos=861,19
-Size=419,701
+Pos=1046,21
+Size=234,699
 Collapsed=0
 DockId=0x00000004,0
 
@@ -33,23 +33,35 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene]
-Pos=200,19
-Size=659,423
+Pos=197,21
+Size=847,467
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Game]
-Pos=200,19
-Size=659,423
+Pos=197,21
+Size=847,467
 Collapsed=0
 DockId=0x00000001,1
 
+[Window][Dear ImGui Demo]
+Pos=1046,21
+Size=234,699
+Collapsed=0
+DockId=0x00000004,1
+
+[Window][File Browser]
+Pos=197,490
+Size=847,230
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,109 Size=1280,701 Split=X
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=198,701 Selected=0x29EABFBD
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1080,701 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=659,701 Split=Y Selected=0x26816F31
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,423 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=604,276 Selected=0xDD3E564C
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=419,701 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=100,52 Size=1280,699 Split=X
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=195,701 Selected=0x29EABFBD
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1083,701 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=847,701 Split=Y Selected=0x26816F31
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,467 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=604,230 Selected=0xFF2336B5
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=234,701 Selected=0xE87781F4
 
