--- a/imgui.ini
+++ b/imgui.ini
@@ -57,11 +57,11 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=100,52 Size=1280,699 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
   DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=195,701 Selected=0x29EABFBD
   DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1083,701 Split=X
     DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=847,701 Split=Y Selected=0x26816F31
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,467 CentralNode=1 Selected=0xE192E354
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=604,230 Selected=0xFF2336B5
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=234,701 Selected=0xE87781F4
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=234,701 Selected=0xE7039252
 
