--- a/imgui.ini
+++ b/imgui.ini
@@ -56,6 +56,12 @@ Size=847,230
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][GameScene]
+Pos=197,21
+Size=847,467
+Collapsed=0
+DockId=0x00000001,1
+
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
   DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=195,701 Selected=0x29EABFBD
