--- a/editor/CMakelists.txt
+++ b/editor/CMakelists.txt
@@ -1,26 +1,9 @@
-include(FetchContent)
-
-# ImGui
-FetchContent_Declare(imgui
-                     GIT_REPOSITORY https://github.com/ocornut/imgui.git
-                     GIT_TAG docking # branch name
-)
-FetchContent_MakeAvailable(imgui)
-
-set(IMGUI_SOURCE_FILES ${imgui_SOURCE_DIR}/imgui.cpp
-                       ${imgui_SOURCE_DIR}/imgui_demo.cpp
-                       ${imgui_SOURCE_DIR}/imgui_draw.cpp
-                       ${imgui_SOURCE_DIR}/imgui_tables.cpp
-                       ${imgui_SOURCE_DIR}/imgui_widgets.cpp
-                       ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl.cpp
-                       ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
-)
-
 add_executable(EditorFrakkas
 			   ${PROJECT_SOURCE_DIR}/appicon.rc
                src/main.cpp
                ${PROJECT_SOURCE_DIR}/lib/glad.c
-               ${IMGUI_SOURCE_FILES}
+			   ${IMGUI_SOURCE_FILES}
+			   ${IMGUI_BACKENDS_FILES}
                src/editor_render.cpp
                src/hierarchy.cpp
                src/menu_bar.cpp
@@ -29,7 +12,8 @@ add_executable(EditorFrakkas
 			   src/inspector.cpp
 			   src/scene.cpp
 			   src/game_scene.cpp
-        	   ${COMMON_SOURCE_DIR}/game/transform.cpp)
+        	   ${COMMON_SOURCE_DIR}/game/transform.cpp
+)
 
 target_link_libraries(EditorFrakkas
                       PRIVATE EngineFrakkas
