--- a/imgui.ini
+++ b/imgui.ini
@@ -10,19 +10,19 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=195,699
+Size=231,428
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-Pos=197,490
-Size=847,230
+Pos=0,451
+Size=1035,269
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Inspector]
-Pos=1046,21
-Size=234,699
+Pos=1037,21
+Size=243,699
 Collapsed=0
 DockId=0x00000004,0
 
@@ -33,41 +33,50 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene]
-Pos=197,21
-Size=847,467
+Pos=233,21
+Size=802,428
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000006,0
 
 [Window][Game]
 Pos=197,21
 Size=847,467
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000006,1
 
 [Window][Dear ImGui Demo]
-Pos=1046,21
-Size=234,699
+Pos=1037,21
+Size=243,699
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][File Browser]
-Pos=197,490
-Size=847,230
+Pos=0,451
+Size=1035,269
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
-Pos=197,21
-Size=847,467
+Pos=233,21
+Size=802,428
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000006,1
+
+[Window][Example: Property editor]
+Pos=97,69
+Size=868,625
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=195,701 Selected=0x29EABFBD
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1083,701 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=847,701 Split=Y Selected=0x26816F31
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=604,467 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=604,230 Selected=0xFF2336B5
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=234,701 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1316,158 Size=1280,699 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,699 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1440,428 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=231,701 Selected=0x29EABFBD
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=802,701 CentralNode=1 Selected=0xE192E354
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1440,269 Selected=0xFF2336B5
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=243,699 Selected=0xE7039252
 
