--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -1,10 +1,11 @@
 add_executable(Launcher launcher.cpp)
 
 target_include_directories(Launcher
-                           PRIVATE ${PROJECT_SOURCE_DIR}/engine/include
-                           PRIVATE ${COMMON_INCLUDE_DIR}
+                           PRIVATE ${ENGINE_INCLUDE_DIR}
+                           PRIVATE ${GAME_INCLUDE_DIR}
+                           PRIVATE ${MATHS_INCLUDE_DIR}
 )
 
-target_link_libraries(Launcher PRIVATE EngineFrakkas)
+target_link_libraries(Launcher PRIVATE GameFrakkas)
 
 set_target_properties(Launcher PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build)
