--- a/imgui.ini
+++ b/imgui.ini
@@ -10,13 +10,13 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=231,428
+Size=230,699
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000006,0
 
 [Window][Console]
-Pos=0,451
-Size=1035,269
+Pos=232,509
+Size=803,211
 Collapsed=0
 DockId=0x00000002,1
 
@@ -33,16 +33,16 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene]
-Pos=233,21
-Size=802,428
+Pos=232,21
+Size=803,486
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000001,0
 
 [Window][Game]
 Pos=197,21
 Size=847,467
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
 Pos=1037,21
@@ -51,16 +51,16 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][File Browser]
-Pos=0,451
-Size=1035,269
+Pos=232,509
+Size=803,211
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
-Pos=233,21
-Size=802,428
+Pos=232,21
+Size=803,486
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000001,1
 
 [Window][Example: Property editor]
 Pos=97,69
@@ -72,11 +72,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1316,158 Size=1280,699 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,699 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1440,428 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=231,701 Selected=0x29EABFBD
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=802,701 CentralNode=1 Selected=0xE192E354
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1440,269 Selected=0xFF2336B5
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,699 Split=X
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=230,699 Selected=0x29EABFBD
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1048,699 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,486 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0xFF2336B5
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=243,699 Selected=0xE7039252
 
