--- a/imgui.ini
+++ b/imgui.ini
@@ -12,11 +12,11 @@ Collapsed=0
 Pos=0,21
 Size=230,699
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,0
 
 [Window][Console]
-Pos=232,509
-Size=803,211
+Pos=232,451
+Size=803,269
 Collapsed=0
 DockId=0x00000002,1
 
@@ -24,7 +24,7 @@ DockId=0x00000002,1
 Pos=1037,21
 Size=243,699
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000008,0
 
 [Window][ResourceViewer]
 Pos=200,444
@@ -34,7 +34,7 @@ DockId=0x00000002,0
 
 [Window][Scene]
 Pos=232,21
-Size=803,486
+Size=803,428
 Collapsed=0
 DockId=0x00000001,0
 
@@ -48,17 +48,17 @@ DockId=0x00000001,1
 Pos=1037,21
 Size=243,699
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000008,1
 
 [Window][File Browser]
-Pos=232,509
-Size=803,211
+Pos=232,451
+Size=803,269
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
 Pos=232,21
-Size=803,486
+Size=803,428
 Collapsed=0
 DockId=0x00000001,1
 
@@ -72,11 +72,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1351,183 Size=1280,699 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,699 Split=X
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=230,699 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=1048,699 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,486 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0xFF2336B5
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=243,699 Selected=0xE7039252
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1035,699 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=230,699 Selected=0x29EABFBD
+    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1048,699 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1280,428 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1280,269 Selected=0x49278EEE
+  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=243,699 Selected=0xE7039252
 
