--- a/imgui.ini
+++ b/imgui.ini
@@ -67,6 +67,12 @@ Pos=97,69
 Size=868,625
 Collapsed=0
 
+[Window][Debugger]
+Pos=232,509
+Size=828,211
+Collapsed=0
+DockId=0x00000002,2
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
