--- a/imgui.ini
+++ b/imgui.ini
@@ -83,6 +83,6 @@ DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
     DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=230,699 Selected=0x29EABFBD
     DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=824,699 Split=Y
       DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,486 CentralNode=1 Selected=0xD76812E7
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0xE1830C86
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0x49278EEE
   DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=222,699 Selected=0xE7039252
 
