integrate profiler on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ FetchContent_Declare(tracy
 FetchContent_MakeAvailable(tracy)
 
 if(NOT EXISTS ${PROJECT_SOURCE_DIR}/lib/tracy)
-file(ARCHIVE_EXTRACT INPUT ${PROJECT_SOURCE_DIR}/lib/tracy_executables.7z
+file(ARCHIVE_EXTRACT INPUT ${PROJECT_SOURCE_DIR}/lib/tracy_executable.7z
                      DESTINATION ${PROJECT_SOURCE_DIR}/lib
 )
 endif()
