--- a/imgui.ini
+++ b/imgui.ini
@@ -16,13 +16,13 @@ DockId=0x00000006,0
 
 [Window][Console]
 Pos=232,509
-Size=824,211
+Size=734,211
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Inspector]
-Pos=1058,21
-Size=222,699
+Pos=968,21
+Size=312,699
 Collapsed=0
 DockId=0x00000004,0
 
@@ -34,7 +34,7 @@ DockId=0x00000002,0
 
 [Window][Scene]
 Pos=232,21
-Size=824,486
+Size=734,486
 Collapsed=0
 DockId=0x00000001,0
 
@@ -45,20 +45,20 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Dear ImGui Demo]
-Pos=1058,21
-Size=222,699
+Pos=968,21
+Size=312,699
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][File Browser]
 Pos=232,509
-Size=824,211
+Size=734,211
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][GameScene]
 Pos=232,21
-Size=824,486
+Size=734,486
 Collapsed=0
 DockId=0x00000001,1
 
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Debugger]
 Pos=232,509
-Size=824,211
+Size=734,211
 Collapsed=0
 DockId=0x00000002,2
 
@@ -79,10 +79,10 @@ Column 1  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=80,111 Size=1280,699 Split=X
-  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=1056,699 Split=X
+  DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=966,699 Split=X
     DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=230,699 Selected=0x29EABFBD
-    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=824,699 Split=Y
-      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,486 CentralNode=1 Selected=0xD76812E7
-      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0x49278EEE
-  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=222,699 Selected=0xE7039252
+    DockNode    ID=0x00000007 Parent=0x00000003 SizeRef=734,699 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1280,486 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1280,211 Selected=0xE1830C86
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=312,699 Selected=0xE7039252
 
