low level renderer architecture
loading models using resources manager

can add a mesh to the model from a 3D model file

resources manager has a thread pool

resources manager does not create the gpu mesh directly after the mesh loading anymore

assimp's importer is a shared_ptr

meshes and textures are multithreadedly loaded

- the informations (mesh and texture) are not returned or used

textures seem well loaded

meshes are loading but they are not linked to their texture

loading a mesh loads its texture (if any)

rebase feature/resources-manager on develop

textures are kept in a map

- textures are only loaded once

models are loaded everytime by assimp

- models' meshes are loaded only once

shaders are loaded by resources manager

low level renderer architecture

can add a mesh to the model from a 3D model file

loading mesh local matrix

meshes are loading but they are not linked to their texture

camera fit (Unreal style)

- the camera's fov changes depending on the aspect ratio

add console

camera fit (Unreal style)

- the camera's fov changes depending on the aspect ratio

added some documentation

added some documentation

fixed easy issues

using std::deque instead of custom queue

sperated thread pool utility classes into separate files

changed Task into a using instead of a class

shader is inheriting from resource

texture is inheriting from resource

loading a texture is now made outside resources manager

naively using mutexes instead of spinlocks

- big problem of performance

using lock_guard

- there are still performance issues

using condition variable

- performance issue fixed

update assimp .lib for windows10

only import fbx / obj / gltf

clean code

Compile on Linux and change property

Add time manager and 'debugger' editor window

add Tracy Profiler for CLion

Add an Engine class to SDL initialization and manager storage

camera fit (Unreal style)

- the camera's fov changes depending on the aspect ratio

Update Property and CameraC

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -15,8 +15,10 @@ add_library(EngineFrakkas STATIC
 			src/resources/program_shader.cpp
 			src/resources/resources_manager.cpp
 			src/resources/serializer.cpp
+			src/resources/texture.cpp
         	src/log.cpp
             src/engine.cpp
+	    src/threadpool.cpp
 			${PROJECT_SOURCE_DIR}/lib/stb_image.c
 			${IMGUI_SOURCE_FILES}
 )
